--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,9 @@
 
 .hero h1 {
     padding: 2rem;
-    font-size: 2.5rem;
-    font-weight: 400;
+    font-size: 4rem;
+    font-weight: 800;
+    font-family: 'Archivo Black', sans-serif !important;
 }
 
 /* servicios */
@@ -97,7 +98,10 @@
 }
 
 .card img {
-    opacity: 0.5;
+    opacity: 0.8;
+    min-width: 300px;
+    max-height: 200px;
+    object-fit: cover;
 }
 
 .card-body {
@@ -128,9 +132,11 @@
   .footer h4 {
     margin-bottom: 1rem;
   }
-  
-  .footer p {
-    margin: 0.5rem 0;
+
+  .footer .socials {
+    display: flex;
+    justify-content: space-around;
+    align-items: end;
   }
   
 
@@ -140,5 +146,9 @@
 @media screen and (max-width: 800px) {
     body .top {
       display: none;
+    }
+
+    .hero h1 {
+        font-size: 2.5rem;
     }
   }
