--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
 }
 
 .servicios .items svg {
-    color: #333381;
+    color: #0099ff;
 }
 
 /* dual container */
@@ -95,6 +95,10 @@
 .card {
     border-radius: 0px !important;
     border: none !important;
+    -webkit-box-shadow: 0px 0px 8px 6px rgba(189,182,189,1);
+    -moz-box-shadow: 0px 0px 8px 6px rgba(189,182,189,1);
+    box-shadow: 0px 0px 8px 6px rgba(189,182,189,1);
+    overflow: hidden;
 }
 
 .card img {
@@ -113,6 +117,11 @@
 .card-body div {
     font-size: large;
     font-weight: 800;
+}
+
+.card-body hr {
+    border: 2px solid #0099ff;
+    width: 70%;
 }
 
 .card .card-body {
@@ -143,7 +152,7 @@
 
 .formulario {
     min-height: 600px;
-    background-color: #03455e;
+    background-color: #0099ff;
     color: white;
     display: flex;
     justify-content: center;
@@ -159,6 +168,11 @@
     margin: 1rem;
 }
 
+.form-control:focus {
+    border-color: rgb(255, 255, 255) !important;
+    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.4) !important;
+}
+
 /* media querys */
 
 @media screen and (max-width: 800px) {
@@ -171,6 +185,6 @@
     }
 
     .formulario .container {
-        width: 100%;
+        width: 90%;
     }
   }
